test/sema/array-ref-pointer.delta.output
array-ref-pointer.delta:5:10: error: pointer to array reference is not yet implemented
void foo(int[]* a) {}
         ^
array-ref-pointer.delta:5:6: warning: unused declaration 'foo'
void foo(int[]* a) {}
     ^
