test/sema/array-ref-pointer.delta
// RUN: %not %delta -typecheck %s | %FileCheck %s

// TODO: Error location column should be at asterisk.
// CHECK: [[@LINE+1]]:10: error: pointer to array reference is not yet implemented
void foo(int[]* a) {}
